Test implementation / Branch coverage